# ipi-2026-m2-il-maj-ia-python-data-agentic-rag

./: corpus.txt  pyproject.toml
src/ipi_2026_m2_il_maj_ia_python_data_agentic_rag/: main.py
